--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+    https://docs.google.com/forms/d/e/1FAIpQLSdlebz5lL7YMtiYrpyyU-xowKXygBH-oJoO9kkhZYOEA_-aLg/viewform?usp=pp_url&entry.839679104=TEST
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -11,8 +12,8 @@
   <script>
     (async () => {
       const LIFF_ID = '2008112263-Dzz98Vkk';        // ← ここをLINE Developersで取得した LIFF ID に差替え
-      const FORM_URL = 'https://docs.google.com/forms/d/e/XXXXXXXXXXX/viewform'; // ← あとで差替え
-      const ENTRY_KEY_FOR_LINEID = 'entry.1234567890'; // ← フォームで得た entry.xxxx に差替え
+      const FORM_URL = 'https://docs.google.com/forms/d/e/1FAIpQLSdlebz5lL7YMtiYrpyyU-xowKXygBH-oJoO9kkhZYOEA_-aLg/viewform?usp=pp_url'; // ← あとで差替え
+      const ENTRY_KEY_FOR_LINEID = 'entry.839679104'; 
 
       await liff.init({ liffId: LIFF_ID });
 
